# movitdemo

./: Cargo.toml  README.md  testnet-deploy.sh  token.json
res/: movit.wasm
src/: lib.rs
