[package]
name = "movit"
version = "0.1.0"
authors = ["Near Movit <movit@github.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
near-sdk = "3.1.0"
# near-contract-standards = "3.1.1"
borsh = "0.7.1"
wee_alloc = "0.4.5"
rand = "=0.7.3"
rand_chacha = "=0.2.2"
rand_seeder = "=0.2.1"
hex = "0.4.3"


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
